# JARL

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/jarl/: CMakeLists.txt  detail.hpp  enum.hpp  getset.hpp  struct.hpp
jarl/: CMakeLists.txt  struct.hpp
